src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
}
.modal-backdrop {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
  opacity: 0;
  animation: fadeIn 0.3s forwards;
}

.modal-content {
  /* background: white; */
  /* position: absolute; */
  /* z-index: 100; */
  border-radius: 8px;
  width: 100%;
  max-width: 400px;
  animation: scaleUp 0.3s forwards;
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes scaleUp {
  from {
    transform: scale(0.9);
  }
  to {
    transform: scale(1);
  }
}

/* Countdown text styles */
.countdown-text {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin: 24px 0px;
}

/* Countdown text paragraph styles */
/* .countdown-text > p {
  font-size: 13px;
  font-weight: 400;
  color: #fdfdfd;
} */

.bg-cust{
    background-color: rgb(212, 246, 255);
  min-height: 100vh;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}
.bg-cust-dark{
  background-image: url("../../public/svg/back.svg");
  min-height: 100vh;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.bg-card1 {
  background-color: rgba(41, 62, 109);
}

.bg-card2 {
  background-color: #ffa065;
}

.bg-card3 {
  background-color: #ffcc00;
}

.bg-card4 {
  background-color: #365ea1;
}

